// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Password field group custom auth component Renders correctly 1`] = `
<div>
  <form
    method="POST"
  >
    <div
      class="relative"
    >
      <label
        class="relative"
      >
        <span
          class="absolute -top-6 left-3 px-1 bg-white"
        >
          <span
            class="text-sm leading-5"
          >
            Dein Passwort
          </span>
        </span>
        <input
          class="w-full pr-11 border rounded-full focus:outline-0 focus:ring px-4 py-2 focus:ring-primary/30"
          data-testid="password"
          placeholder="Dein Passwort"
          type="password"
          value=""
        />
      </label>
      <div
        class="absolute right-3 top-1/2 -translate-y-2/4"
      >
        <div
          class="cursor-pointer"
          data-testid="password-view-toggle"
        >
          <svg
            class="text-coreUI-text-secondary"
            fill="inherit"
            height="24"
            viewBox="0 0 22 16"
            width="24"
          >
            <path
              clip-rule="evenodd"
              d="M14 8C14 9.65685 12.6569 11 11 11C9.34315 11 8 9.65685 8 8C8 6.34315 9.34315 5 11 5C12.6569 5 14 6.34315 14 8Z M1.45825 7.99997C2.73253 3.94288 6.52281 1 11.0004 1C15.4781 1 19.2684 3.94291 20.5426 8.00004C19.2684 12.0571 15.4781 15 11.0005 15C6.52281 15 2.73251 12.0571 1.45825 7.99997Z"
              fill="none"
              fill-rule="evenodd"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            />
          </svg>
        </div>
      </div>
    </div>
  </form>
</div>
`;

exports[`Password field group custom auth component Renders correctly for password view toggled 1`] = `
<div>
  <form
    method="POST"
  >
    <div
      class="relative"
    >
      <label
        class="relative"
      >
        <span
          class="absolute -top-6 left-3 px-1 bg-white"
        >
          <span
            class="text-sm leading-5"
          >
            Dein Passwort
          </span>
        </span>
        <input
          class="w-full pr-11 border rounded-full focus:outline-0 focus:ring px-4 py-2 focus:ring-primary/30"
          data-testid="password"
          placeholder="Dein Passwort"
          type="text"
          value=""
        />
      </label>
      <div
        class="absolute right-3 top-1/2 -translate-y-2/4"
      >
        <div
          class="cursor-pointer"
          data-testid="password-view-toggle"
        >
          <svg
            class="text-coreUI-text-secondary"
            fill="inherit"
            height="24"
            viewBox="0 0 22 21"
            width="24"
          >
            <path
              clip-rule="evenodd"
              d="M19.54,1l-18,18.5Z M13.54,10.25a3,3,0,1,1-3-3A3,3,0,0,1,13.54,10.25Z M1,10.25a10,10,0,0,1,19.08,0A10,10,0,0,1,1,10.25Z"
              fill="none"
              fill-rule="evenodd"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            />
          </svg>
        </div>
      </div>
    </div>
  </form>
</div>
`;
